--- a/examples/machine-do.yaml
+++ b/examples/machine-do.yaml
@@ -19,7 +19,8 @@ spec:
       monitoring: true
       tags:
         - "machine-controller"
-    operatingSystemConfig:
+    operatingSystem: "coreos"
+    operatingSystemSpec:
       disableAutoUpdate: true
   roles:
   - "Node"
