--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -43,3 +43,7 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
 [[constraint]]
   name = "github.com/aws/aws-sdk-go"
   version = "1.12.53"
+
+[[constraint]]
+  name = "github.com/gophercloud/gophercloud"
+  branch = "master"
