--- a/examples/deployment-kubeadm.yml
+++ b/examples/deployment-kubeadm.yml
@@ -68,12 +68,24 @@ kind: ClusterRole
 metadata:
   name: machine-controller
 rules:
-  - apiGroups:
-      - "apiextensions.k8s.io"
-    resources:
-      - "customresourcedefinitions"
-    verbs:
-      - "create"
+- apiGroups:
+  - "apiextensions.k8s.io"
+  resources:
+  - "customresourcedefinitions"
+  verbs:
+  - "create"
+- apiGroups:
+  - "machine.k8s.io"
+  resources:
+  - "machines"
+  verbs:
+  - "*"
+- apiGroups:
+  - ""
+  resources:
+  - "nodes"
+  verbs:
+  - "*"
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
