Use our own clusterrolebinding for bootstrapping

--- a/examples/deployment-kubeadm.yml
+++ b/examples/deployment-kubeadm.yml
@@ -1,3 +1,16 @@
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  name: machine-controller:kubelet-bootstrap
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:node-bootstrapper
+subjects:
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: system:bootstrappers:machine-controller:default-node-token
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
