--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -51,3 +51,7 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
 [[constraint]]
   name = "github.com/go-test/deep"
   version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/pmezard/go-difflib"
+  version = "1.0.0"
