--- a/examples/machine-openstack.yaml
+++ b/examples/machine-openstack.yaml
@@ -34,5 +34,7 @@ spec:
   versions:
     kubelet: "v1.8.5" # Kubelet wrapper image tag
     containerRuntime:
-      name: "docker" # Not implemented atm - currently: coreos default docker
-      version: "1.13" # Not implemented atm - currently: coreos default docker
+      # If you are using Ubuntu, you may choose 'cri-o' instead
+      name: "docker"
+      # Only has an effect on Ubuntu, check pkg/userdata/ubuntu/docker.go for available versions
+      version: "1.13"
