--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -59,3 +59,11 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
 [[constraint]]
   branch = "master"
   name = "github.com/heptiolabs/healthcheck"
+
+[[constraint]]
+  name = "github.com/go-kit/kit"
+  version = "v0.6.0"
+
+[[constraint]]
+  name = "github.com/prometheus/client_golang"
+  version = "v0.8.0"
