--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -48,6 +48,18 @@ spec:
             - -logtostderr
             - -v=8
             - -cluster-dns=10.10.10.10
+            - -health-listen-address=0.0.0.0:8086
+          livenessProbe:
+            httpGet:
+              path: /live
+              port: 8086
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /ready
+              port: 8086
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: ServiceAccount
