implements verify method
at the moment this includes checking the cluster state before and after a new machine has been created.

--- a/test/tools/verify/manifests/machine-digitalocean.yaml
+++ b/test/tools/verify/manifests/machine-digitalocean.yaml
@@ -12,7 +12,7 @@ spec:
     cloudProviderSpec:
       token: "<<DO_TOKEN>>"
       region: "fra1"
-      size: "2gb"
+      size: "512mb"
       backups: false
       ipv6: false
       private_networking: true
