--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -67,3 +67,7 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
 [[constraint]]
   name = "github.com/prometheus/client_golang"
   version = "v0.8.0"
+
+[[constraint]]
+  name = "github.com/hetznercloud/hcloud-go"
+  version = "v1.3.0"
