--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
     machine: true
     working_directory: /go/src/github.com/kubermatic/machine-controller
     steps:
+      - run: mkdir -p go/src/github.com/kubermatic/machine-controller/machine-controller
       - restore_cache:
           key: machine-controller-{{ .Revision }}
       - restore_cache:
