--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
           echo $PWD >/dev/stderr && mkdir ~/testfolder && ls -l ~ >/dev/stderr && sudo mkdir
           go/src/github.com/kubermatic/machine-controller -p && sudo chmod 777
           go/src/github.com/kubermatic/machine-controller &&
-          /go/src/github.com/kubermatic/machine-controller -p && sudo chmod 777
+          mkdir -p /go/src/github.com/kubermatic/machine-controller && sudo chmod 777
           /go/src/github.com/kubermatic/machine-controller
       - restore_cache:
           key: machine-controller-{{ .Revision }}
