--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,8 @@ jobs:
           go/src/github.com/kubermatic/machine-controller -p && sudo chmod 777
           go/src/github.com/kubermatic/machine-controller &&
           sudo mkdir -p /go/src/github.com/kubermatic/machine-controller && sudo chmod 777 -R
-          /go/src/github.com/kubermatic/machine-controller
+          /go/src/github.com/kubermatic/machine-controller &&
+          sudo chown -R circleci:circleci /go/src/github.com/kubermatic/machine-controller
       - restore_cache:
           key: machine-controller-{{ .Revision }}
       - restore_cache:
