--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,8 @@ jobs:
       - restore_cache:
           key: machine-controller-{{ .Revision }}
       - restore_cache:
+          key: vendor-{{ checksum "Gopkg.lock" }}
+      - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
       - run: cd /go/src/github.com/kubermatic/machine-controller && make docker-image
 
