--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           key: machine-controller-{{ .Revision }}
       - restore_cache:
           key: vendor-{{ checksum "/go/src/github.com/kubermatic/machine-controller/Gopkg.lock" }}
-      - run: cd /go/src/github.com/kubermatic/machine-controller && make docker-image
+      - run: cd /go/src/github.com/kubermatic/machine-controller && make docker-image-nodep
 
 workflows:
   version: 2
