--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
       - run: >
           cd /go/src/github.com/kubermatic/machine-controller &&
           make docker-image-nodep &&
-          docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASS &&
+          docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_PASS}" &&
           make push-nodep
 
 workflows:
