Only publish on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,3 +88,7 @@ workflows:
       - publish:
           requires:
             - build
+          filters:
+            branches:
+              only:
+                - master
