--- a/test/tools/integration/Makefile
+++ b/test/tools/integration/Makefile
@@ -20,3 +20,13 @@ apply:
 		-e TF_VAR_hcloud_sshkey_content="$(shell cat ~/.ssh/id_rsa.pub)" \
 		terraform-hetzner \
 		/bin/bash -c "terraform apply -auto-approve"
+
+destroy:
+	@docker run --rm \
+		--workdir=/opt/hetzner \
+		-v $(shell pwd):/opt/hetzner:rw \
+		-e TF_VAR_hcloud_token=$(shell vault read --field=token work/hetzner_cloud) \
+		-e TF_VAR_hcloud_sshkey_name=$(shell echo $$USER) \
+		-e TF_VAR_hcloud_sshkey_content="$(shell cat ~/.ssh/id_rsa.pub)" \
+		terraform-hetzner \
+		/bin/bash -c "terraform destroy -force"
