--- a/test/tools/integration/Makefile
+++ b/test/tools/integration/Makefile
@@ -5,7 +5,7 @@ plan:
 	@docker run --rm \
 		--workdir=/opt/hetzner \
 		-v $(shell pwd):/opt/hetzner:rw \
-		-e TF_VAR_hcloud_token=$(shell vault read --field=token work/hetzner_cloud) \
+		-e TF_VAR_hcloud_token=$(shell echo $$HZ_TOKEN) \
 		-e TF_VAR_hcloud_sshkey_name=$(shell echo $$USER) \
 		-e TF_VAR_hcloud_sshkey_content="$(shell cat ~/.ssh/id_rsa.pub)" \
 		terraform-hetzner \
@@ -15,7 +15,7 @@ apply:
 	@docker run --rm \
 		--workdir=/opt/hetzner \
 		-v $(shell pwd):/opt/hetzner:rw \
-		-e TF_VAR_hcloud_token=$(shell vault read --field=token work/hetzner_cloud) \
+		-e TF_VAR_hcloud_token=$(shell echo $$HZ_TOKEN) \
 		-e TF_VAR_hcloud_sshkey_name=$(shell echo $$USER) \
 		-e TF_VAR_hcloud_sshkey_content="$(shell cat ~/.ssh/id_rsa.pub)" \
 		terraform-hetzner \
