--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,13 +62,13 @@ jobs:
           key: machine-controller-{{ .Revision }}
       - restore_cache:
           key: vendor-{{ checksum "/go/src/github.com/kubermatic/machine-controller/Gopkg.lock" }}
-      - run: >
-          cd /go/src/github.com/kubermatic/machine-controller &&
-          make docker-image-nodep &&
-          docker login --help &&
-          docker version &&
-          set -u &&
-          docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_PASS}" &&
+      - run: |
+          set -e
+          cd /go/src/github.com/kubermatic/machine-controller
+          make docker-image-nodep
+          docker version
+          set -u
+          docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_PASS}"
           make push-nodep
 
 workflows:
