Fix Docker container to be able to talk to https endpoints

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -46,6 +46,7 @@ spec:
       serviceAccountName: machine-controller
       containers:
         - image: kubermatic/machine-controller:latest
+          imagePullPolicy: IfNotPresent
           name: machine-controller
           command:
             - /usr/local/bin/machine-controller
