--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,23 +51,18 @@ jobs:
             - machine-controller
 
   publish:
-    machine: true
+    docker:
+      - image: docker:stable
+    working_directory: /go/src/github.com/kubermatic/machine-controller
     steps:
-      - run: >
-          sudo mkdir -p /go/src/github.com/kubermatic/machine-controller &&
-          sudo chown -R circleci:circleci /go/src/github.com/kubermatic/machine-controller
       - restore_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
       - restore_cache:
-          key: machine-controller-{{ .Revision }}
-      - restore_cache:
           key: vendor-{{ checksum "/go/src/github.com/kubermatic/machine-controller/Gopkg.lock" }}
+      - setup_remote_docker
       - run: |
           set -e
-          cd /go/src/github.com/kubermatic/machine-controller
           make docker-image-nodep
-          docker version
-          set -u
           docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_PASS}"
           make push-nodep
 
