Enable publish circleci target for all branches for testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ workflows:
       - publish:
           requires:
             - build
-          filters:
-            branches:
-              only:
-                - master
+            #          filters:
+            #            branches:
+            #              only:
+            #                - master
