--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ workflows:
       - publish:
           requires:
             - build
-            #          filters:
-            #            branches:
-            #              only:
-            #                - master
+          filters:
+            branches:
+              only:
+                - master
