Build and publish Docker image in circleci pipeline (#67)
Fixes #57

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,27 @@ jobs:
       - restore_cache:
           key: vendor-{{ checksum "Gopkg.lock" }}
       - run: go build -o machine-controller github.com/kubermatic/machine-controller/cmd/controller
+      - save_cache:
+          key: machine-controller-{{ .Revision }}
+          paths:
+            - machine-controller
+
+  publish:
+    docker:
+      - image: docker:stable
+    working_directory: /go/src/github.com/kubermatic/machine-controller
+    steps:
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          key: machine-controller-{{ .Revision }}
+      - setup_remote_docker
+      - run: apk update && apk add make bash git
+      - run: |
+          set -e
+          export GIT_TAG=$CIRCLE_TAG
+          docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_PASS}"
+          make docker-image-nodep
 
 workflows:
   version: 2
@@ -60,4 +81,10 @@ workflows:
       - build:
           requires:
             - install-dependencies
-
+      - publish:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
