Fix cri-o, there is no 1.9.1 package anymore

--- a/test/tools/integration/Makefile
+++ b/test/tools/integration/Makefile
@@ -22,6 +22,7 @@ apply:
 		/bin/bash -c "if ! ls .terraform; then terraform init; fi; terraform apply -auto-approve"
 
 provision: apply
+	cd ../../../ && make machine-controller
 	./provision_master.sh
 
 destroy:
