--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -98,7 +98,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
-  name: configmap-reader-kube-public
+  name: machine-controller
   namespace: kube-public
 rules:
 - apiGroups:
@@ -113,7 +113,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
-  name: endpoints-reader-default
+  name: machine-controller
   namespace: default
 rules:
 - apiGroups:
@@ -128,26 +128,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
-  name: machine-controller-kube-public
-  namespace: kube-system
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: configmap-reader-kube-public
-subjects:
-- kind: ServiceAccount
   name: machine-controller
   namespace: kube-system
----
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: RoleBinding
-metadata:
-  name: machine-controller-default
-  namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: endpoints-reader-default
+  name: machine-controller
 subjects:
 - kind: ServiceAccount
   name: machine-controller
@@ -158,6 +144,20 @@ kind: RoleBinding
 metadata:
   name: machine-controller
   namespace: kube-public
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: machine-controller
+subjects:
+- kind: ServiceAccount
+  name: machine-controller
+  namespace: kube-system
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: RoleBinding
+metadata:
+  name: machine-controller
+  namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
