--- a/examples/machine-digitalocean.yaml
+++ b/examples/machine-digitalocean.yaml
@@ -25,7 +25,7 @@ spec:
   roles:
   - "Node"
   versions:
-    kubelet: "v1.8.5_coreos.0" # Kubelet wrapper image tag
+    kubelet: "v1.8.5"
     containerRuntime:
       # If you are using Ubuntu, you may choose 'cri-o' instead
       name: "docker"
