Use configVars in digitalocean provider

--- a/examples/machine-digitalocean.yaml
+++ b/examples/machine-digitalocean.yaml
@@ -10,15 +10,22 @@ spec:
       - "<< YOUR_PUBLIC_KEY >>"
     cloudProvider: "digitalocean"
     cloudProviderSpec:
-      token: "<< YOUR_DO_TOKEN >>"
-      region: "fra1"
-      size: "2gb"
-      backups: false
-      ipv6: false
-      private_networking: true
-      monitoring: true
+      token:
+        value: "<< YOUR_DO_TOKEN >>"
+      region:
+        value: "fra1"
+      size:
+        value: "2gb"
+      backups:
+        value: false
+      ipv6:
+        value: false
+      private_networking:
+        value: true
+      monitoring:
+        value: true
       tags:
-        - "machine-controller"
+        - value: "machine-controller"
     operatingSystem: "coreos"
     operatingSystemSpec:
       disableAutoUpdate: true
