Add rbac rules to work with leader election

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -94,6 +94,20 @@ rules:
   - machine-controller-ssh-key
   verbs:
   - get
+- apiGroups:
+  - ""
+  resources:
+  - endpoints
+  resourceNames:
+  - machine-controller
+  verbs:
+  - "*"
+- apiGroups:
+  - ""
+  resources:
+  - endpoints
+  verbs:
+  - create
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
