--- a/examples/machine-digitalocean.yaml
+++ b/examples/machine-digitalocean.yaml
@@ -1,3 +1,15 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  # If you change the namespace/name, you must also
+  # adjust the rbac rules
+  name: machine-controller-digitalocean
+  namespace: kube-system
+type: Opaque
+data:
+  # Must be base64 encoded like this: echo -n '<<token>>'|base64 -w0
+  token: << DIGITALOCEAN_TOKEN_BASE64_ENCODED >>
+---
 apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
@@ -11,21 +23,18 @@ spec:
     cloudProvider: "digitalocean"
     cloudProviderSpec:
       token:
-        value: "<< YOUR_DO_TOKEN >>"
-      region:
-        value: "fra1"
-      size:
-        value: "2gb"
-      backups:
-        value: false
-      ipv6:
-        value: false
-      private_networking:
-        value: true
-      monitoring:
-        value: true
+        valueFrom:
+          namespace: kube-system
+          name: machine-controller-digitalocean
+          key: token
+      region: fra1
+      size: 2gb
+      backups: false
+      ipv6: false
+      private_networking: true
+      monitoring: true
       tags:
-        - value: "machine-controller"
+        - "machine-controller"
     operatingSystem: "coreos"
     operatingSystemSpec:
       disableAutoUpdate: true
