--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -94,6 +94,7 @@ rules:
   - machine-controller-ssh-key
   - machine-controller-hetzner
   - machine-controller-digitalocean
+  - machine-controller-openstack
   verbs:
   - get
 - apiGroups:
