--- a/examples/machine-aws.yaml
+++ b/examples/machine-aws.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  # If you change the namespace/name, you must also
+  # adjust the rbac rules
+  name: machine-controller-aws
+  namespace: kube-system
+type: Opaque
+data:
+  # Must be base64 encoded like this: echo -n '<<value>>'|base64 -w0
+  accessKeyId: << AWS_ACCESS_KEY_ID_BASE64_ENCODED >>
+  secretAccessKey: << AWS_SECRET_ACCESS_KEY_BASE64_ENCODED>>
+---
 apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
@@ -10,8 +23,16 @@ spec:
       - "<< YOUR_PUBLIC_KEY >>"
     cloudProvider: "aws"
     cloudProviderSpec:
-      accessKeyId: "<< YOUR_ACCESS_KEY_ID >>"
-      secretAccessKey: "<< YOUR_SECRET_ACCESS_KEY_ID >>"
+      accessKeyId:
+        valueFrom:
+          namespace: kube-system
+          name: machine-controller-aws
+          key: accessKeyId
+      secretAccessKey:
+        valueFrom:
+          namespace: kube-system
+          name: machine-controller-aws
+          key: secretAccessKey
       region: "eu-central-1"
       availabilityZone: "eu-central-1a"
       vpcId: "vpc-819f62e9"
