Use go 1.10 for building verify tool

--- a/test/tools/verify/Makefile
+++ b/test/tools/verify/Makefile
@@ -1,8 +1,12 @@
+GO_VERSION = 1.10.0
+
 verify: cmd/*
 		@docker run --rm \
 			-v $$PWD/../../..:/go/src/github.com/kubermatic/machine-controller \
+			-v $$PWD/../../../.buildcache:/cache \
+			-e GOCACHE=/cache \
 			-w /go/src/github.com/kubermatic/machine-controller/test/tools/verify \
-			golang:1.9.2 \
+			golang:$(GO_VERSION) \
 			env CGO_ENABLED=0 go build \
 				-ldflags '-s -w' \
 				-o verify \
